--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "watch": "nodemon src/app.js -e js,hbs"
   },
   "author": "",
   "license": "ISC",
